--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AZURE_API_KEY=5afcb4386cae4087aeadb6cd55ba901b
-AZURE_ENDPOINT=https://coding-assignment-2.openai.azure.com/
+AZURE_API_KEY=
+AZURE_ENDPOINT=
